--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img width="200" height="200" src="images/Ryan Profile-modified.png" alt="Ryan Profile picture"></td>
+                <td><img width="200" height="200" src="Cv/images/Ryan Profile-modified.png" alt="Ryan Profile picture"></td>
                 <td><h1>Ryan Nwoko</h1><P><em>First son of my parents, heir to the <strong><a href="https://www.youtube.com/watch?v=SLHWGlLJWzk">Throne</a></strong></em></P>
                     <p>I am a one year old and i ❤ breast milk.</p></td>
             </tr>
